objects/Quote__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>IF(ISBLANK(Account__c),&apos;&apos;,Account__r.Account_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Am_I_the_record_Owners_Manager__c</fullName>
        <description>Used to calculate whether the logged in user is the record Owners Manger or not.</description>
        <formula>IF( Owner:User.ManagerId = $User.Id , True , False)</formula>
        <label>Am I the record Owners Manager?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Carriage_Forward__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carriage Forward</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collection_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Collection Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collection_Postcode__c</fullName>
        <description>Collection postcode</description>
        <label>Collection: Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commodity__c</fullName>
        <label>Type of packaging</label>
        <picklist>
            <picklistValues>
                <fullName>TSL 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSL 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSL 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSL 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSL 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASSORTED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARTON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENVELOPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GARMENTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DANGEROUS GOODS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INCOMPATIBLE TRAFFIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JIFFY BAG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LONG LENGTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDICAL SUPPLIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PALLET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROLL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FULL SET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TECHNOLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SACK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUNDLE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Phone__c</fullName>
        <label>Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <label>Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <label>Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Contact must belong to the same Account as specified on Quote record.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dangerous_Goods__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is this a shipment of dangerous goods?</description>
        <label>Dangerous Goods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <description>Received from Responce</description>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Postcode__c</fullName>
        <description>Delivery postcode</description>
        <label>Delivery: Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Town__c</fullName>
        <description>Delivery Town</description>
        <label>Delivery: Town</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Only__c</fullName>
        <description>email field if matching contact cannot be found</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_the_quote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field to indicate that contact wants to be emailed the quote</description>
        <inlineHelpText>Does the contact want the quote emailed to them?</inlineHelpText>
        <label>Email the quote?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enhanced_Liability_Option__c</fullName>
        <description>The Tier/Level of Enhanced Liability selected by the customer for a Booking/Quote</description>
        <inlineHelpText>What level of Enhanced Liability does the customer want for this quote?</inlineHelpText>
        <label>Enhanced Liability Option</label>
        <picklist>
            <picklistValues>
                <fullName>0 - None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1 - £3.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - £6.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - £9.00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fuel_Supplement__c</fullName>
        <inlineHelpText>The Fuel Supplement should be entered only when you receive communication of a rate change.  If left blank a default value is used in the quotation.</inlineHelpText>
        <label>Fuel Supplement</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Is_Guaranteed_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Receive from Responce</description>
        <label>Is Guaranteed Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Premium_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Receive from Responce</description>
        <label>Is Premium Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Items_Description__c</fullName>
        <label>Description of Content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_Long_Length_Items__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Stores the number of Long Length Items that have been entered on the Quote Line Items Over 160cm in any dimension.  This value is calculated within the code on record Edit and is set when the user clicks Save. (See OL_BookingQuoteHelper.cls)</description>
        <label>No. Long Length Items</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pallet_Pollicy__c</fullName>
        <label>Pallet Pollicy</label>
        <summaryFilterItems>
            <field>Quote_Line_Item__c.Pallet_Policy__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line_Item__c.Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_is_Valid__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This is to confirm whether a Quote is valid or out of date</description>
        <inlineHelpText>A quote remains valid to proceed to a booking until midnight on the day it is created</inlineHelpText>
        <label>Quote is Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Not_Booking__c</fullName>
        <label>Reason for Not Booking</label>
        <picklist>
            <picklistValues>
                <fullName>Customer to book via CIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incompatible traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need to confirm with bill payer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need to confirm with receiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Old rate removed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to offer EL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to offer required service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Owners_Manager__c</fullName>
        <description>Shows the name of the record Owners Manager as setup on User records. This field is used for reporting at team level.</description>
        <formula>Owner:User.Manager.FirstName + &apos; &apos; + Owner:User.Manager.LastName</formula>
        <label>Record Owners Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <description>Name of service that was selected for Quote</description>
        <label>Service Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <formula>IF(!ISBLANK(Account__r.Account_Special_Instructions__c),Account__r.Account_Special_Instructions__c,&apos;&apos;) &amp;  BR() &amp;
IF(!ISBLANK(Account__r.Special_Instructions_2__c),Account__r.Special_Instructions_2__c ,&apos;&apos;) &amp;  BR() &amp;
IF(!ISBLANK(Account__r.Special_Instructions_3__c),Account__r.Special_Instructions_3__c ,&apos;&apos;) &amp;  BR() &amp;
IF(!ISBLANK(Account__r.Special_Instructions_4__c),Account__r.Special_Instructions_4__c ,&apos;&apos;) &amp;  BR() &amp;
IF(!ISBLANK(Account__r.Special_Instructions_5__c),Account__r.Special_Instructions_5__c ,&apos;&apos;) &amp;  BR() &amp;
IF(!ISBLANK(Account__r.Special_Instructions_6__c),Account__r.Special_Instructions_6__c ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplements_Details__c</fullName>
        <description>Supplements included in Price.  Get from Response.</description>
        <label>Supplements Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Items__c</fullName>
        <label>Total Number of Items</label>
        <summarizedField>Quote_Line_Item__c.Number_of_Items__c</summarizedField>
        <summaryForeignKey>Quote_Line_Item__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Volume_Rounded__c</fullName>
        <description>Total Volume rounded to 3 decimal places. It is the same as the Volume field but has been kept as it is used in the Quote integration to send the volume amount. We could remove this field in future but would require the interface to be updated also.</description>
        <formula>Total_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Volume Rounded</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Volume__c</fullName>
        <label>Total Volume</label>
        <summarizedField>Quote_Line_Item__c.Volume__c</summarizedField>
        <summaryForeignKey>Quote_Line_Item__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Weight__c</fullName>
        <label>Total Weight (kg)</label>
        <summarizedField>Quote_Line_Item__c.Total_Weight__c</summarizedField>
        <summaryForeignKey>Quote_Line_Item__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Validation_Deadline__c</fullName>
        <defaultValue>TODAY()+1</defaultValue>
        <label>Quote Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Volumetric_Weight__c</fullName>
        <description>This field is not used as part of the Quote interface but is useful for agents to determine Quote parameters used in the price calculation</description>
        <formula>Total_Volume__c  * 250</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volumetric Weight (kg)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quote</label>
    <listViews>
        <fullName>All_Quotes</fullName>
        <columns>NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Price__c</columns>
        <columns>Quote_is_Valid__c</columns>
        <columns>Service_Name__c</columns>
        <columns>Total_Weight__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Quotes</label>
    </listViews>
    <listViews>
        <fullName>All_Todays_Quotes</fullName>
        <columns>NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Price__c</columns>
        <columns>Quote_is_Valid__c</columns>
        <columns>Service_Name__c</columns>
        <columns>Total_Weight__c</columns>
        <columns>Value__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Today&apos;s Quotes</label>
    </listViews>
    <listViews>
        <fullName>Last_Weeks_Quotes</fullName>
        <columns>NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Price__c</columns>
        <columns>Quote_is_Valid__c</columns>
        <columns>Service_Name__c</columns>
        <columns>Total_Weight__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Last Weeks Quotes</label>
    </listViews>
    <listViews>
        <fullName>My_Quotes</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Number__c</columns>
        <columns>Collection_Date__c</columns>
        <columns>Contact_First_Name__c</columns>
        <columns>Contact_Last_Name__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Collection_Postcode__c</columns>
        <columns>Delivery_Postcode__c</columns>
        <columns>Price__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <listViews>
        <fullName>My_Quotes_Last_Week</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Number__c</columns>
        <columns>Collection_Date__c</columns>
        <columns>Contact_First_Name__c</columns>
        <columns>Contact_Last_Name__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Collection_Postcode__c</columns>
        <columns>Delivery_Postcode__c</columns>
        <columns>Price__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>My Quotes Last Week</label>
    </listViews>
    <listViews>
        <fullName>My_Quotes_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Number__c</columns>
        <columns>Collection_Date__c</columns>
        <columns>Contact_First_Name__c</columns>
        <columns>Contact_Last_Name__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Collection_Postcode__c</columns>
        <columns>Delivery_Postcode__c</columns>
        <columns>Price__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>My Quotes This Week</label>
    </listViews>
    <listViews>
        <fullName>My_Quotes_Today</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Number__c</columns>
        <columns>Collection_Date__c</columns>
        <columns>Contact_First_Name__c</columns>
        <columns>Contact_Last_Name__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Collection_Postcode__c</columns>
        <columns>Delivery_Postcode__c</columns>
        <columns>Price__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>My Quotes Today</label>
    </listViews>
    <listViews>
        <fullName>This_Weeks_Quotes</fullName>
        <columns>NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Price__c</columns>
        <columns>Quote_is_Valid__c</columns>
        <columns>Service_Name__c</columns>
        <columns>Total_Weight__c</columns>
        <columns>Value__c</columns>
        <columns>Email_the_quote__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>This Weeks Quotes</label>
    </listViews>
    <listViews>
        <fullName>Unpriced_Quotes_This_This_Week</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Account_Number__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Quote_is_Valid__c</columns>
        <columns>Total_Weight__c</columns>
        <columns>Value__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Price__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Unpriced Quotes This Week</label>
    </listViews>
    <nameField>
        <displayFormat>QR{000000}</displayFormat>
        <label>Quote Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <recordTypes>
        <fullName>NewQuote</fullName>
        <active>true</active>
        <description>Quote without price, can be edited</description>
        <label>New Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>PricedQuote</fullName>
        <active>true</active>
        <description>Quote with price, can not be edited</description>
        <label>Priced Quote</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Dangerous_Goods</fullName>
        <active>false</active>
        <description>You cannot save a dangerous goods item to an account which doesn&apos;t ship dangerous goods.</description>
        <errorConditionFormula>ISPICKVAL(Account__r.Dangerous_Goods__c,&apos;No&apos;) &amp;&amp; Dangerous_Goods__c</errorConditionFormula>
        <errorDisplayField>Dangerous_Goods__c</errorDisplayField>
        <errorMessage>You cannot save a dangerous goods item to an account which doesn&apos;t ship dangerous goods.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Delivery_Postcode_or_Town_are_mandatory</fullName>
        <active>false</active>
        <description>Delivery Postcode or Town are requier</description>
        <errorConditionFormula>ISBLANK( Delivery_Postcode__c ) &amp;&amp; ISBLANK( Delivery_Town__c )</errorConditionFormula>
        <errorDisplayField>Delivery_Postcode__c</errorDisplayField>
        <errorMessage>Delivery Postcode or Town should be entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_or_Contact</fullName>
        <active>true</active>
        <description>Email can only be entered if there is no Contact found and vice versa.</description>
        <errorConditionFormula>Email_the_quote__c &amp;&amp;  Email_Only__c = &apos;&apos; &amp;&amp;   Contact__r.Email  = &apos;&apos;</errorConditionFormula>
        <errorDisplayField>Email_the_quote__c</errorDisplayField>
        <errorMessage>To email the quote, you have to select a contact with a stored email address, or populate the email field with an email address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>On_Stop_Quote_Prevention_Rule</fullName>
        <active>false</active>
        <description>When the On Stop field is checked, the Account is ON STOP. Only a Stubbins user is able to edit the status of an Account which is ON STOP. No Quote can be saved against this account without permissions from Stubbins.</description>
        <errorConditionFormula>Account__r.On_Stop__c = TRUE &amp;&amp; !Account__r.Stubbins_Temporary_Permission__c</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>This Account is On Stop. Approval must be given from Stubbins to save a Quote for this Account.</errorMessage>
    </validationRules>
</CustomObject>